2010-07-17  Patrice Dumas  <pertusus@free.fr>

	* texi2html.pl: accept --set-init-var VAR=VALUE syntax. Karl
	idea.
	* texi2html.pl: for split documents, append the extension to
	the out directory, and try with the new directory, if the normal
	one cannot be used.
	* texi2html.pl, texi2html.init, formats/html.init: do redirection 
	files for renamed nodes (in %renamed_nodes), configuration 
	variable RENAMED_NODES_REDIRECTIONS set in html only.
	* texi2html.pl: don't show menu with --no-headers as said in the
	makeinfo documentation.

2010-07-15  Patrice Dumas  <pertusus@free.fr>

	* texi2html.pl, *.pm, texi2html.init, check_texinfo.pl.in, 
	manage_i18n.pl.in, */*.init, doc/texi2html.texi: update 
	license notices to GPLv3. Cleanup a bit the copyright
	years and mark explicitly the public domain files.
	* examples/noheaders.init: don't duplicate texi2html.init.
	* Makefile.am: install texi2any as the main program. Install
	texi2html and makeinfo as links to texi2any.

2010-07-14  Patrice Dumas  <pertusus@free.fr>

	* texi2html.pl: obsolete texi2html specific options.
	* texi2html.init, texi2html.pl, */*.init: rename 
	$Texi2HTML::THISDOC{'program'} as 
	$Texi2HTML::THISDOC{'program_and_version'}, and have
	$Texi2HTML::THISDOC{'program'} hold the program name only.
	Remove $Texi2HTML::THISDOC{'program_authors'}.
	Simplify the comment at the beginning of html output files.
	* texi2html.pl: remove $Texi2HTML::THISDOC{'out_dir'}.
	* texi2html.pl: set more @-command related information in
	configuration variables.

2010-07-13  Patrice Dumas  <pertusus@free.fr>

	* texi2html.pl, texi2html.init, maintained_extra/mediawiki.init: 
	set NODE_FILES when split.

2010-07-12  Patrice Dumas  <pertusus@free.fr>

	* texi2html.pl, texi2html.init, formats/*: use functions to set
	configuration variables, and not perl variables. This allows
	for command-line options overriding defaults. Report from Karl.
	Warn when output file is incompatible with split or format is